added report driver for not following directions