@@ -1,7 +1,5 @@
 package com.example.ubernet.service;
 
-import com.example.ubernet.controller.DriverInconsistencyController;
-import com.example.ubernet.dto.LeafletRouteDTO;
 import com.example.ubernet.exception.BadRequestException;
 import com.example.ubernet.model.*;
 import com.example.ubernet.repository.CustomerRepository;
@@ -10,10 +8,9 @@ import com.example.ubernet.repository.RideRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.lang.reflect.Array;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 
 @AllArgsConstructor
 @Service
@@ -22,22 +19,22 @@ public class DriverInconsistencyService {
     private DriverInconsistencyRepository driverInconsistencyRepository;
     private CustomerRepository customerRepository;
     private RideRepository rideRepository;
+    private NotificationService notificationService;
 
     private DriverInconsistency save(DriverInconsistency driverInconsistency) {
         return this.driverInconsistencyRepository.save(driverInconsistency);
     }
 
-
-    public DriverInconsistency createDriverInconsistency(String customerEmail, Ride ride) {
-        DriverInconsistency driverInconsistency = driverInconsistencyRepository.findByRideId(ride.getId());
+    public DriverInconsistency createDriverInconsistencyComplaint(String customerEmail, Long rideId) {
+        DriverInconsistency driverInconsistency = driverInconsistencyRepository.findByRideId(rideId);
         Customer customer = customerRepository.findByEmail(customerEmail);
         if (customer == null) throw new BadRequestException("Customer with this email does not exist");
-        if (driverInconsistency == null) {
-            driverInconsistency = new DriverInconsistency();
-            driverInconsistency.setRide(ride);
-            driverInconsistency.setDeleted(false);
-            driverInconsistency.setCustomers(Arrays.asList(customer));
+        if (driverInconsistency.getCustomers().size() == 0) {
+            driverInconsistency.setCustomers(List.of(customer));
         } else {
+            for (Customer customerThatComplained : driverInconsistency.getCustomers()) {
+                if (customerThatComplained.getEmail().equals(customerEmail)) throw new BadRequestException("You have already complained!");
+            }
             driverInconsistency.getCustomers().add(customer);
         }
         return save(driverInconsistency);
@@ -47,20 +44,28 @@ public class DriverInconsistencyService {
         List<Ride> currentRides = rideRepository.findCurrentRides();
         List<Ride> reportableRides = new ArrayList<>();
         for (Ride ride : currentRides) {
-            List<NumberOfRoute> numberOfRoutes = ride.getRoute().getNumberOfRoute();
-            List<NumberOfRoute> carNumberOfRoutes = ride.getDriver().getCar().getNavigation().getFirstRide().getNumberOfRoute();
-            if (!routeChoicesSame(numberOfRoutes, carNumberOfRoutes)) {
+            if (driverInconsistencyRepository.findByRideId(ride.getId())!=null) continue;
+            Car car = ride.getDriver().getCar();
+            Position position = car.getPosition();
+            boolean carIsOnRightPath = false;
+            for (PositionInTime positionInTime: ride.getRideRequest().getCurrentRide().getPositions()) {
+                if (Objects.equals(positionInTime.getPosition().getX(), position.getX())
+                        && Objects.equals(positionInTime.getPosition().getY(), position.getY())) {
+                    carIsOnRightPath = true;
+                    break;
+                }
+            }
+            if (!carIsOnRightPath) {
+                for (Customer customer:ride.getCustomers()){
+                    this.notificationService.notifyCustomerForDriverInconsistency(customer, ride);
+                    DriverInconsistency driverInconsistency = new DriverInconsistency();
+                    driverInconsistency.setRide(ride);
+                    driverInconsistency.setDeleted(false);
+                    save(driverInconsistency);
+                }
                 reportableRides.add(ride);
             }
         }
         return reportableRides;
-    }
-
-    private boolean routeChoicesSame(List<NumberOfRoute> numberOfRoutes, List<NumberOfRoute> carNumberOfRoutes) {
-        if (numberOfRoutes.size() != carNumberOfRoutes.size()) return false;
-        for (int i = 0; i < numberOfRoutes.size(); i++) {
-            if (numberOfRoutes.get(i) != carNumberOfRoutes.get(i)) return false;
-        }
-        return true;
     }
 }
